--- a/1.2-requests-templates/recipes/calculator/templates/calculator/index.html
+++ b/1.2-requests-templates/recipes/calculator/templates/calculator/index.html
@@ -5,10 +5,23 @@
     <title>Рецепты</title>
 </head>
 <body>
-{% for ingredient, amount in recipe.items %}
-    <p>{{ ingredient }}: {{ amount }}</p>
-{% empty %}
-    <p>Такого рецепта не знаю :(</p>
-{% endfor %}
+    <h3>Our menu today:</h3>
+    {% for dish in dishes %}
+        <input type="button" value={{dish}} class="dish">
+    {% endfor %}
 </body>
+
+<script>
+    document.addEventListener("click", function(e) {
+        if (e.target.className==="dish") {
+            const persons = prompt('how much persons ? :', '1');
+            if (persons === null) {
+                return False;
+            } else {
+                url=`${window.location.href}${e.target.value}?servings=${persons}`;
+                window.open(url, '_self');
+            }
+        }
+    })
+</script>
 </html>
