--- a/2.1-databases/work_with_database/templates/catalog.html
+++ b/2.1-databases/work_with_database/templates/catalog.html
@@ -17,9 +17,9 @@
       <a class="sort-item" href="?sort=max_price">начиная с дорогих</a>
     </div>
 
-    <div class="content">
+    <div class="content row">
       {% for phone in phones %}
-        <div class="phone">
+        <div class="phone col-md-3">
           <a href="{% url 'phone' phone.slug %}">
             <h3>{{ phone.name }}</h3>
           </a>
